v0.2 java version